v1.04 code refactoring + add basic logging