@@ -1,44 +1,43 @@
 package org.example.Models;
 
+import org.example.Logging;
+
 import java.util.ArrayList;
 import java.util.List;
 
 public class Calculator {
+    private final Logging logging = new Logging();
     // main calculation method
     public double calculate(String expression) {
         expression += " ";
         ArrayList<String> array = new ArrayList<>(parseToArray(expression));
         ArrayList<String> ONP = new ArrayList<>(toONP(array));
-        String log = "";
-        for (String s : ONP) {
-            log += s + " ";
-        }
-        System.out.println(log);
         double result = calculateResult(ONP);
+        logging.log(ONP);
+        logging.log(result);
         return result;
     }
     //parsing from string to array of elements
     List<String> parseToArray(String expression) {
         ArrayList<String> array = new ArrayList<>();
-        String temp = "";
+        StringBuilder temp = new StringBuilder();
         for (int i = 0; i < expression.length(); i++) {
             char currentChar = expression.charAt(i);
             if (Character.isWhitespace(currentChar)) {
                 continue;
             }
-
             if (Character.isDigit(currentChar)) {
-                temp += currentChar;
+                temp.append(currentChar);
             } else {
                 if (!temp.isEmpty()) {
-                    array.add(temp);
-                    temp = "";
+                    array.add(temp.toString());
+                    temp = new StringBuilder();
                 }
                 array.add(String.valueOf(currentChar));
             }
         }
         if (!temp.isEmpty()) {
-            array.add(temp);
+            array.add(temp.toString());
         }
         return array;
     }
@@ -54,20 +53,20 @@ public class Calculator {
             } else if (s.equals("(")) {
                 stos.add(s);
             } else if (s.equals(")")) {
-                while (!stos.isEmpty() && !stos.get(stos.size() - 1).equals("(")) {
-                    ONP.add(stos.remove(stos.size() - 1));
+                while (!stos.isEmpty() && !stos.getLast().equals("(")) {
+                    ONP.add(stos.removeLast());
                 }
-                stos.remove(stos.size() - 1);
+                stos.removeLast();
             } else if (isOperator(s)) {
-                while (!stos.isEmpty() && prioryty(s) <= prioryty(stos.get(stos.size() - 1))) {
-                    ONP.add(stos.remove(stos.size() - 1));
+                while (!stos.isEmpty() && priority(s) <= priority(stos.getLast())) {
+                    ONP.add(stos.removeLast());
                 }
                 stos.add(s);
             }
         }
 
         while (!stos.isEmpty()) {
-            ONP.add(stos.remove(stos.size() - 1));
+            ONP.add(stos.removeLast());
         }
 
         return ONP;
@@ -81,8 +80,8 @@ public class Calculator {
             if (isInteger(s)) {
                 stos.add(Double.parseDouble(s));
             } else {
-                b = stos.remove(stos.size() - 1);
-                a = stos.remove(stos.size() - 1);
+                b = stos.removeLast();
+                a = stos.removeLast();
                 stos.add(calc(a, b, s));
             }
         }
@@ -90,40 +89,29 @@ public class Calculator {
     }
     // utils for calculating
     double calc(double a, double b, String operator){
-        switch (operator) {
-            case "+":
-                return a + b;
-            case "-":
-                return a - b;
-            case "*":
-                return a * b;
-            case "/":
-                return a / b;
-        }
-        return -1;
+        return switch (operator) {
+            case "+" -> a + b;
+            case "-" -> a - b;
+            case "*" -> a * b;
+            case "/" -> a / b;
+            default -> -1;
+        };
     }
     // check if it's a number or not
     boolean isInteger(String string) {
         return string.matches("-?\\d+");
     }
     //operator priority determination
-    int prioryty(String expression) {
-        switch (expression) {
-            case "(":
-                return 0;
-            case "+":
-            case "-":
-                return 1;
-            case "*":
-            case "/":
-                return 2;
-            case "^":
-                return 3;
-            default:
-                return -1;
-        }
+    int priority(String expression) {
+        return switch (expression) {
+            case "(" -> 0;
+            case "+", "-" -> 1;
+            case "*", "/" -> 2;
+            case "^" -> 3;
+            default -> -1;
+        };
     }
-    //check if it's a operator or not
+    //check if it's an operator or not
     boolean isOperator(String string) {
         return string.equals("+") || string.equals("-") || string.equals("*") || string.equals("/");
     }
